--- a/.gitmodules
+++ b/.gitmodules
@@ -43,6 +43,6 @@
 [submodule "scripts-lua"]
 	path = scripts-lua
 	url = ../plugin-scripts-lua.git
-[submodule "cooliTSclimax"]
-	path = cooliTSclimax
+[submodule "coolitsclimax"]
+	path = coolitsclimax
 	url = ../plugin-coolitsclimax.git
